--- a/index.html
+++ b/index.html
@@ -207,13 +207,45 @@
 </section>
 <!--unlcok ends-->
 <!--achivments starts-->
-<section id="Achievements" class=" py-5">
+<section id="Achievements" class="py-5">
     <div class="container">
-        <div class="row">
-
+        <div class="row text-start ">
+            <div class="col col-md-4 col-sm-4">
+                <h1 class="text-dark opacity-75 ">Helping a local <br><section class="h1-1 text-start">business reinvent itself</section> </h1>
+                    <p style="
+                    font-weight: 400;
+                    color: var(--text-gray-900, #18191F);
+                    font-family: Inter;" 
+                        class="text-dark opacity-100">We reached here with our hard work and dedication</p> 
+            </div>
+            <div class="col-12 col-md-8 col-sm-12">
+           <div class="row row1">
+              <div class="col 2">
+                <img height="50" src="images/logos/Icon4.svg" alt="">
+                <p></p>
+              </div>
+              <div class="col 1">
+                <img height="50" src="images/logos/Icon5.svg" alt="">
+              </div>
+           </div>
+           <div class="row row2">
+                <div class="col 3">
+                <img height="50" src="images/logos/Icon6.svg" alt="">
+                </div>
+                <div class="col 4">
+                <img height="50" src="images/logos/Icon7.svg" alt="">
+                </div>
+           </div>
+           <div class="col-4   col-lg-2">
+                <a type="button" class="unlockbtn text-white text-decoration-none  ">Learn More</a>
+            </div>
+            </div>
+            
         </div>
     </div>
+
 </section>
+
 <!--achivments ends-->
 <!-- footer-->
 <footer id="about" class="bg-dark opacity-75 py-5">
