--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!--Navbar Starts-->
-<nav class="navbar navbar-expand-lg navbar-light py-4 ">
+<nav class="navbar navbar-expand-lg navbar-light py-4  ">
     <div class="container">
         <a class="navbar-brand d-flex justify-content-between align-items-center
         order-lg-0" href="index.html">
@@ -24,7 +24,7 @@
              data-bs-toggle="collapse" data-bs-target="#navMenu">
                 <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse  navbar-collapse order-lg-1" id="navMenu"> <!--Nav menü -->
+        <div class="collapse navbar-collapse order-lg-1" id="navMenu"> <!--Nav menü -->
             <ul class="navbar-nav mx-auto text-center">
                 <li class="nav-item px-2 py-2"> <!--ul li a kullanarak nav menüye item ekledik-->
                     <a class="nav-link text-uppercase text-dark" href="#header">Home</a>
@@ -41,7 +41,7 @@
                 <li class="nav-item px-2 py-2">
                     <a class="nav-link text-uppercase text-dark" href="#pricing">Pricing</a>
                 </li>
-                <li class="nav-item px-2 py-2 registerbtn" >
+                <li class="nav-item px-2 py-2 registerbtn col-sm-2 col-md-12" >
                     <a class="nav-link text-white  registertext " href="#">Register Now  </a> 
                     <span class="ok"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 7 7" fill="none">
                         <path d="M4.4214 4.5177L5.24597 3.69314C5.34376 3.59535 5.34376 3.4368 5.24597 3.33901L4.4214 2.51445M5.17262 3.51607L1.5 3.51607" stroke="white" stroke-width="0.367253" stroke-linecap="round"/>
@@ -57,16 +57,16 @@
 <!--carousel strats-->
 <div id="carouselExampleCaptions" class="carousel slide" >
     <div class="carousel-indicators" >
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active indicatorss" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2" class="indicatorss"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3" class="indicatorss" ></button>
     </div>
     <div class="carousel-inner  " >
       <div class="carousel-item active " >
-        <div class="column  col-xl-12 col-md-12 col-6 ">
+        <div class="column  col-xl-12 col-md-12 col-12 col-sm-12">
         <img src="images/Illustration.png" class="img1 " alt="...">
     </div>
-        <div class="carousel-caption cptn  col-md-5 col-12 ">
+        <div class="carousel-caption cptn  col-md-12 col-12 ">
           <h1 class="text-dark  ">Lessons and insights <br><section class="h1-1 text-start">from 8 years</section> </h1>
           <p class="text-dark opacity-75">Where to grow your business as a photographer: site or social media?
         </p>
@@ -75,10 +75,10 @@
       </div>
      
       <div class="carousel-item">
-        <div class="column  col-xl-12 col-md-12 col-6 ">
+        <div class="column  col-xl-12 col-md-12 col-12 col-sm-12 ">
             <img src="images/Illustration.png" class="img1 " alt="...">
         </div>
-            <div class="carousel-caption cptn  col-md-5 col-12 ">
+            <div class="carousel-caption cptn  col-md-12 col-12 ">
               <h1 class="text-dark  ">Lessons and insights </h1>
               <h1 class="h1-1 ">from 8 years</h1>
               <p class="text-dark opacity-75">Where to grow your business as a photographer: site or social media?
@@ -87,10 +87,10 @@
             </div>
       </div>
       <div class="carousel-item">
-        <div class="column  col-xl-12 col-md-12 col-6 ">
+        <div class="column  col-xl-12 col-md-12 col-12 col-sm-12 ">
             <img src="images/Illustration.png" class="img1 " alt="...">
         </div>
-            <div class="carousel-caption cptn  col-md-5 col-12 ">
+            <div class="carousel-caption cptn  col-md-12 col-12 ">
               <h1 class="text-dark  ">Lessons and insights </h1>
               <h1 class="h1-1 ">from 8 years</h1>
               <p class="text-dark opacity-75">Where to grow your business as a photographer: site or social media?
@@ -145,13 +145,14 @@
     <div class="container">
         <div class="row text-black g-2">
             <div class="">
-                <h3 class="oclients">Manage your entire community in a single system</h3>
+                <h3 class="oclients ">Manage your entire community in a single system</h3>
                 <p class="clientssub py-3">Who is Nextcent suitable for?</p>
             </div>
         </div>
         <div class="frames">
-            <div class="row align-items-center text-center">
-                <div class="col-auto col-md-4 col-sm-12">
+            <div class="row  align-items-center align-content-center justify-content-center text-center">
+
+                <div class="col-12 col-lg-4 col-md-6">
                     <div class="card " style="width: 18rem;">
                         <img src="images/logos/Icon.svg" class=" card-img-top" alt="...">
                         <div class="card-body">
@@ -161,7 +162,7 @@
                         </div>
                       </div>    
                 </div>
-                <div class="col col-md-4 col-sm-12">
+                <div class="col-12 col-lg-4 col-md-6">
                     <div class="card" style="width: 18rem;">
                         <img src="images/logos/Icon2.svg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -171,7 +172,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col col-md-4 col-sm-12">
+                <div class="col-12 col-lg-4 col-md-6">
                     <div class="card" style="width: 18rem;">
                         <img src="images/logos/Icon3.svg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -228,7 +229,7 @@
                 </section>
                   </div>
                   <div class="col-6 col-md-6 col-sm-4 d-flex">
-                    <img height="100" src="images/logos/Iconel.svg" alt="">
+                    <img height="70" src="images/logos/Iconel.svg" alt="">
                     <section>
                     <p class="colnumber mx-2">2,245,341</p>
                     <p class="collabel mx-2 opacity-50  ">Members</p>
@@ -246,7 +247,7 @@
                     </section>  
                 </div>
                   <div class="col-6 col-md-6 col-sm-4 d-flex ">
-                    <img height="50" src="images/logos/Icon7.svg" alt="">
+                    <img height="60" src="images/logos/Icon7.svg" alt="">
                     <section>
                     <p class="colnumber mx-2">2,245,341</p>
                     <p class="collabel mx-2 opacity-50  ">Members</p>
@@ -290,7 +291,7 @@
             <p class="  customerp"> Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien, vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.</p>
             <h3 class=" py-2 customerh">Tim Smith</h3> 
             <p class=" py-3 customerp2">British Dragon Boat Racing Association </p>
-            <div class="align-content-start align-items-start  d-flex">
+            <div class="client-logos align-content-start align-items-start  d-flex">
                 <div class="col  ">
                     <img src="images/logos/Logo.svg" height="25"  alt="">
                 </div>
@@ -310,7 +311,7 @@
                     <img src="images/logos/Logo6.svg"  height="25" alt="">
                 </div>
                 <div class="registerbtn3 col  ">
-                <a class=" registertext3 text-decoration-none my-2 " href="#">Meet all customers </a> 
+                <a class=" registertext3 text-decoration-none my-0 " href="#">Meet all customers </a> 
                     <span class="ok"><img src="images/logos/Right.svg" alt="">
                     </span>
                 </div>
@@ -324,12 +325,12 @@
 <section id="community-updates">
     <div class="container ">
         <div class="row  ">
-            <div class="col col-md-12 community">
-                <h2 class="communityH mt-5">CAring is the new marketing</h2>
+            <div class="col-12 col-sm-12 col-md-12 community">
+                <h2 class="communityH mt-5">Caring is the new marketing</h2>
                 <p class="communityP mt-2">The Nextcent blog is the best place to read about the latest membership insights, trends and more. See who's joining the community, read about how our community are increasing their membership income and lot's more.​</p>
             </div>
-            <div class="mt-4 mx-auto row  align-content-center align-items-center justify-content-center">
-                <div class="col-12  col-md-6 col-lg-4  ">
+            <div class="mt-4 mx-5 row  align-content-center align-items-center justify-content-center">
+                <div class="mt-4 col-12  col-md-6 col-lg-4  ">
                     <img class="cardimages"  src="images/image 18.svg" alt="">
                     <div class="card cards-0">
                         <p class="cardp">Creating Streamlined Safeguarding Processes with OneRen</p>
@@ -338,7 +339,7 @@
                           </svg> </a>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="mt-4 col-12 col-md-6 col-lg-4">
                     <img class="cardimages" src="images/image 20.svg" alt="">
                     <div class="card cards-0">
                         <p class="cardp">What are your safeguarding responsibilities and how can you manage them?</p>
@@ -347,7 +348,7 @@
                           </svg> </a>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="mt-4 col-12 col-md-6 col-lg-4">
                     <img class="cardimages" src="images/image 19.svg" alt="">
                     <div class="card cards-0">
                         <p class="cardp">Revamping the Membership Model with Triathlon Australia</p>
@@ -366,11 +367,11 @@
 <!-- footer-->
 <!--Customer's starts-->
 <section id="footeriki">
-    <div class="container ">
+    <div class="container  ">
         <div class="row  ">
             <div class="col col-md-12 community">
                 <h2 class="communityH mt-3">Pellentesque suscipit fringilla libero eu..</h2>
-                <a href="##"  class="registerbtn text-decoration-none"  font-weight: 1000;">
+                <a href="##"  class="mt-4 py-2 px-3 registerbtn text-decoration-none" >
                 <span  class="registertext">  Get a Demo <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
                     <path d="M3.8047 3.87494L4.62927 3.05038C4.72706 2.95259 4.72706 2.79404 4.62927 2.69625L3.8047 1.87169M4.55592 2.87331L0.883301 2.87331" stroke="white" stroke-width="0.367253" stroke-linecap="round"/>
                   </svg>  </span> </a>
