--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         <div class="collapse navbar-collapse order-lg-1" id="navMenu"> <!--Nav menü -->
             <ul class="navbar-nav mx-auto text-center">
                 <li class="nav-item px-2 py-2"> <!--ul li a kullanarak nav menüye item ekledik-->
-                    <a class="nav-link text-uppercase text-dark" href="#header">Home</a>
+                    <a class="nav-link text-uppercase text-dark" href="index.html">Home</a>
                 </li>
                 <li class="nav-item px-2 py-2">
-                    <a class="nav-link text-uppercase text-dark" href="#features">Features</a>
+                    <a class="nav-link text-uppercase text-dark" href="#community-updates">Features</a>
                 </li>
                 <li class="nav-item px-2 py-2">
                     <a class="nav-link text-uppercase text-dark" href="#community">Community</a>
                 </li>
                 <li class="nav-item px-2 py-2">
-                    <a class="nav-link text-uppercase text-dark" href="#blog">Blog</a>
+                    <a class="nav-link text-uppercase text-dark" href="#customers">Blog</a>
                 </li>
                 <li class="nav-item px-2 py-2">
-                    <a class="nav-link text-uppercase text-dark" href="#pricing">Pricing</a>
+                    <a class="nav-link text-uppercase text-dark" href="#footeriki">Pricing</a>
                 </li>
                 <li class="nav-item px-2 py-2 registerbtn col-sm-2 col-md-12" >
                     <a class="nav-link text-white  registertext " href="#">Register Now  </a> 
@@ -66,7 +66,7 @@
         <div class="column  col-xl-12 col-md-12 col-12 col-sm-12">
         <img src="images/Illustration.png" class="img1 " alt="...">
     </div>
-        <div class="carousel-caption cptn  col-md-12 col-12 ">
+        <div class="carousel-caption cptn  col-md-12 col-10 ">
           <h1 class="text-dark  ">Lessons and insights <br><section class="h1-1 text-start">from 8 years</section> </h1>
           <p class="text-dark opacity-75">Where to grow your business as a photographer: site or social media?
         </p>
