--- a/index.html
+++ b/index.html
@@ -66,42 +66,42 @@
         
       <div class="carousel-item active  " >
        <div class="row align-items-center  ">
-        <div class="col-auto col-sm-6 my-5 my-sm-0 mx-5 px-5  ">
-          <h1 class="text-dark  " style="font-size: 10ch;">Lessons and insights <br><section class="h1-1 ">from 8 years</section> </h1>
-          <p class=" opacity-75 mt-5 text-dark">Where to grow your business as a photographer: site or social media?
+        <div class="col-auto col-sm-6 my-5 my-sm-0  ">
+          <h1 class="text-dark  " style="font-size: 6ch;">Lessons and insights <br><section class="h1-1 ">from 8 years</section> </h1>
+          <p class=" opacity-75 mt-5 text-dark ">Where to grow your business as a photographer: site or social media?
         </p>
         <a type="button" class=" registerbtn2 text-white text-decoration-none   ">Register</a>
         </div>
         <div class="col ">
-            <img src="images/logos/Illustration2.svg" class=" w-75 d-block py-0 my-0 py-sm-5 my-sm-3  " height="600" alt="...">
+            <img src="images/logos/Illustration2.svg" class=" img1 d-flex d-block py-0 my-0 py-sm-5 my-sm-3  "  alt="...">
         </div>
     </div>
 </div>
 
       <div class="carousel-item">
-        <div class="row align-items-center">
+        <div class="row align-items-center  ">
             <div class="col-auto col-sm-6 my-5 my-sm-0  ">
-              <h1 class="text-dark text-start ">Lessons and insights <br><section class="h1-1 text-start">from 8 years</section> </h1>
-              <p class=" opacity-75 cptn text-dark">Where to grow your business as a photographer: site or social media?
+              <h1 class="text-dark  " style="font-size: 6ch;">Lessons and insights <br><section class="h1-1 ">from 8 years</section> </h1>
+              <p class=" opacity-75 mt-5 text-dark ">Where to grow your business as a photographer: site or social media?
             </p>
             <a type="button" class=" registerbtn2 text-white text-decoration-none   ">Register</a>
             </div>
             <div class="col ">
-                <img src="images/logos/Illustration2.svg" class="img1 " alt="...">
+                <img src="images/logos/Illustration2.svg" class=" img1 d-flex py-0 my-0 py-sm-5 my-sm-3  " alt="...">
             </div>
         </div>
      </div>
      
       <div class="carousel-item">
-        <div class="row align-items-center">
-            <div class="col-auto col-sm-6 my-5 my-sm-0 ">
-              <h1 class="text-dark text-start ">Lessons and insights <br><section class="h1-1 text-start">from 8 years</section> </h1>
-              <p class=" opacity-75 cptn text-dark">Where to grow your business as a photographer: site or social media?
+        <div class="row align-items-center  ">
+            <div class="col-auto col-sm-6 my-5 my-sm-0  ">
+              <h1 class="text-dark  " style="font-size: 6ch;">Lessons and insights <br><section class="h1-1 ">from 8 years</section> </h1>
+              <p class=" opacity-75 mt-5 text-dark ">Where to grow your business as a photographer: site or social media?
             </p>
             <a type="button" class=" registerbtn2 text-white text-decoration-none   ">Register</a>
             </div>
             <div class="col ">
-                <img src="images/logos/Illustration2.svg" class="img1 " alt="...">
+                <img src="images/logos/Illustration2.svg" class=" img1 d-flex py-0 my-0 py-sm-5 my-sm-3  "  alt="...">
             </div>
         </div>
       </div>
@@ -153,7 +153,7 @@
         <div class="row text-black g-2">
             <div class="">
                 <h3 class="oclients ">Manage your entire community in a single system</h3>
-                <p class="clientssub py-3">Who is Nextcent suitable for?</p>
+                <p class="clientssub py-3 mt-4">Who is Nextcent suitable for?</p>
             </div>
         </div>
         <div class="frames">
