--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 <section id="Achievements" class="py-5">
     <div class="container ">
         <div class="row text-start ">
-            <div class="col col-md-4 col-sm-4">
+            <div class="col col-md-4 ">
                 <h1 class="text-dark opacity-75 ">Helping a local <br><section class="h1-1 text-start">business reinvent itself</section> </h1>
                     <p style="
                     font-weight: 400;
